--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <script src="src/js/libs/quagga.min.js"></script>
+</head>
+<body>
 
+</body>
+</html>
