added sound player

--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 
 <!-- Start of details page -->
 <section id="details-page" class="invisible">
-    <p>details</p>
-    <a href="#scan">Back</a>
+    <div class="nav-bar">
+        <a href="#scan">Back</a>
+    </div>
 
     <!-- Details page template will be rendered in this div -->
     <div id="details-page-content"></div>
