added error handling

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
     </div>
 
     <!-- Details page template will be rendered in this div -->
-    <div id="details-page-content"></div>
+    <div id="details-page-content">
+
+    </div>
 </section>
 <!-- End of details page -->
 
