changed back button text from english to dutch

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <!-- Start of details page -->
 <section id="details-page" class="invisible">
     <div class="nav-bar">
-        <a href="#scan">Back</a>
+        <a href="#scan">Terug</a>
     </div>
 
     <!-- Details page template will be rendered in this div -->
