added skeleton loading

--- a/index.html
+++ b/index.html
@@ -65,7 +65,15 @@
 
     <!-- Details page template will be rendered in this div -->
     <div id="details-page-content">
-
+        <div id="tracks">
+            <div class="skeleton-title"></div>
+            <div class="skeleton"></div>
+            <div class="skeleton"></div>
+            <div class="skeleton"></div>
+            <div class="skeleton"></div>
+            <div class="skeleton"></div>
+            <div class="skeleton"></div>
+        </div>
     </div>
 </section>
 <!-- End of details page -->
