replaced png by svg

--- a/index.html
+++ b/index.html
@@ -12,7 +12,30 @@
 <section id="home-page" class="invisible">
 
     <div class="scan-button-container">
-        <a href="#scan" class="scan-button"></a>
+        <a href="#scan" class="scan-button">
+            <svg viewBox="0 0 1000 1000" fill="#ffffff" width="110" height="110">
+                <path d="M357.7,737.1h47.4v47.4h-47.4V737.1z"/>
+                <path d="M357.7,215.5h47.4v474.2h-47.4V215.5z"/>
+                <path d="M452.6,737.1h94.8v47.4h-94.8V737.1L452.6,737.1z"/>
+                <path d="M262.9,215.5h47.4v474.2h-47.4V215.5z"/>
+                <path d="M452.6,215.5h23.7v474.2h-23.7V215.5z"/>
+                <path d="M120.6,737.1h47.4v47.4h-47.4V737.1L120.6,737.1z"/>
+                <path d="M120.6,215.5h94.8v474.2h-94.8V215.5z"/>
+                <path d="M262.9,737.1h47.4v47.4h-47.4V737.1z"/>
+                <path d="M500,215.5h47.4v474.2H500V215.5z"/>
+                <path d="M594.8,737.1h47.4v47.4h-47.4V737.1z"/>
+                <path d="M760.8,215.5h23.7v474.2h-23.7V215.5z"/>
+                <path d="M831.9,215.5h47.4v474.2h-47.4V215.5z"/>
+                <path d="M831.9,737.1h47.4v47.4h-47.4V737.1z"/>
+                <path d="M594.8,215.5h23.7v474.2h-23.7V215.5z"/>
+                <path d="M689.7,215.5h47.4v474.2h-47.4V215.5z"/>
+                <path d="M689.7,737.1h94.8v47.4h-94.8V737.1z"/>
+                <path d="M120.6,125.4v-20.5H10v20.5v93.3h20.5v-93.3H120.6z"/>
+                <path d="M10,781.4v93.3v20.5h20.5h90.1v-20.5H30.5v-93.3H10z"/>
+                <path d="M990,781.4h-19v93.3h-91.7v20.5H990v-20.5V781.4z"/>
+                <path d="M879.4,104.8v20.5H971v93.3h19v-93.3v-20.5h-19H879.4z"/>
+            </svg>
+        </a>
         <span class="ripple"></span>
     </div>
 
